add code to remove the job user auth on snapshot delete; other misc changes